# LexGuardian

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  pyproject.toml
configs/: configs.yaml
lex_guardian/: diagram.py  rag.py  utils.py
notebooks/: lex_guardian_RAG.ipynb
