[tool.poetry]
name = "lexguardian"
version = "0.1.0"
description = "The law chatbot for you."
authors = ["KK"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
