[tool.poetry]
name = "lexguardian"
version = "0.1.0"
description = "The law chatbot for you."
authors = ["KK"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
langchain = "^0.2.6"
jupyter = "^1.0.0"
qdrant-client = "^1.10.0"
langchain-community = "^0.2.6"
pypdf = "^4.2.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"
langchain-anthropic = "^0.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
